[package]
name = "cloudbreak-core"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
authors = [
  "Triton One Limited",
  "Fernando Deluret <38841537+fernandodeluret@users.noreply.github.com>",
  "Arthur Paiva <38506981+ArthurPaivaT@users.noreply.github.com>",
  "Nagaprasad V R <81755170+Nagaprasadvr@users.noreply.github.com>",
  "Kyle Espinola",
  "Wilfred Almeida <60785452+WilfredAlmeida@users.noreply.github.com>",
  "Daniel Urgell",
  "Mateusz Mroz",
]

[dependencies]
humantime = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
cloudbreak-entity = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
solana-pubkey = { workspace = true }
solana-program = { workspace = true }
solana-rpc-client-api = { workspace = true }
rust_decimal = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = "1.0.143"